client/src/app/pages/people/people-search/people-search.component.scss
@import '../../../../styles/variables';
$profile-form-field-mt: 30px;

a {
  text-decoration: none;
}

.loader {
  position: absolute;
  top: 50%;
  left: 50%;
}

:host {
  .career-main {
    background-color: $bg-color-1;
    height: 100%;
    width:100%;
    display: table;

    .common-search-filter {
      .people-search-header {
        background-color: $white;
        border: 1px solid #ddd;
        padding: 12px 10px;
        text-align: center;
        margin-bottom: 20px;
        position: relative;
        z-index: 1;
        left: 0;
    
        & mat-form-field {
          width: 560px;
          border-radius: 50px;
          background-color: $bg-color-1;
          font-style: italic;
          font-size: 14px;
          line-height: 21px;
          font-family: "Poppins", sans-serif;
          font-weight: 500;
        }
    
        & .mat-icon {
          top: -13px;
          right: 0;
          cursor: pointer;
          font-size: 26px;
          position: absolute;
          color: rgba(map-get($md-cfaccent, 500), .34);
        }
      }
      .filter-data {
        & .filter_icon {
          display: none;
        }
      }
    }

    .people-main-container {
      background-color: $bg-color-1;
      display: table;
      width: 94%;
      margin: 0 auto;

      .people-list-container {
        float: right;
        width: 70.3%;
        padding-bottom: 80px;
      
        .row {
          background: $white;
          padding: 10px 18px;
          border-bottom: 1px solid map-get($md-cfaccent, 50);
          margin-bottom: 5px;
          border-radius: 5px;
      
          a {
            text-decoration: none;
          }
      
          &.no-people {
            @include btn-align-center;
          }
      
          .header-container {
            width: 100%;
            margin-bottom: 20px;
            @include flex(row, flex-start, space-between);
      
            action-button {
              margin-top: 10px;
            }
          }
      
          .sub-container {
            width: 100%;
            margin-bottom: 20px;
            display: inline-flex;
            flex-wrap: wrap;
            .user-info {
              margin-bottom: 10px;
              margin-right: 20px;
            }
          }
      
          .skills-container {
            width: 100%;
            margin-bottom: 20px;
      
            h5 {
              margin-top: 0;
              margin-bottom: 0;
              font-family: 'Poppins-Regular', sans-serif;
              font-weight: 400;
              font-style: normal;
              font-size: 14px;
              line-height: 21px;
              color: rgba(map-get($md-cfaccent, 500), .34);
      
              span.count {
                color: rgba(map-get($md-cfaccent, 500), .84);
              }
            }
      
            .skills {
              @include flex(row, center, flex-start);
      
              img {
                width: 30px;
                height: 30px;
                margin: 10px 0 5px 10px;
                cursor: pointer;
              }
      
              simple-tag {
                margin: 10px 10px 5px 0;
              }
            }
          }
        }
      
        .user-info {
          display: grid;
          grid-template:
            " image info "auto / 60px minmax(min-content, max-content);
          ;
          grid-column-gap: 10px;
          background-color: transparent;
      
          .image {
            grid-area: image;
            @include flex(row, center, flex-start);
      
            &>img {
              width: 60px;
              height: 60px;
              border-radius: 50%;
              object-fit: cover;
            }
      
            &.secondary {
              &>img {
                width: 56px;
                height: 56px;
                border-radius: 0;
              }
            }
          }
      
          .info {
            grid-area: info;
            width: 100%;
            @include flex(column, flex-start, center);
      
            h2.name {
              font-family: 'Poppins-Semibold', sans-serif;
              font-weight: 600;
              font-size: 30px;
              line-height: 43px;
              color: rgba(map-get($md-cfaccent, 500), .84);
              margin: 0;
            }
      
            h3.title {
              font-family: 'Poppins-Medium', sans-serif;
              font-weight: 500;
              font-size: 16px;
              line-height: 23px;
              color: rgba(map-get($md-cfaccent, 500), .84);
              margin: 0;
            }
      
            h4.secondary-title {
              font-family: 'Roboto', sans-serif;
              font-weight: 500;
              font-style: normal;
              font-size: 16px;
              line-height: 17px;
              color: rgba(map-get($md-cfaccent, 500), .84);
              margin: 0;
            }
      
            h5.secondary-title {
              font-family: 'Poppins-Medium', sans-serif;
              font-weight: 400;
              font-size: 14px;
              line-height: 20px;
              color: rgba(map-get($md-cfaccent, 500), .34);
              margin: 0;
            }
          }
        }
      }

      .pagination {
        float: right;
      
        ul {
          padding: 3px 10px;
          border-radius: 50px;
          background-color: map-get($md-cfgray, 500);
          @include inline-block-btn;
      
          li {
            @include inline-block-btn;
            height: 15px;
            width: 15px;
            font-size: 14px;
            text-align: center;
            border-radius: 100%;
            padding: 8px;
            overflow: hidden;
            vertical-align: middle;
            color: $header-color;
            cursor: pointer;
            font-family: "Poppins", sans-serif;
            font-weight: 500;
            line-height: 21px;
      
            &.active {
              background-color: $white;
            }
      
            &.large_pagination_button {
              height: auto;
              width: auto;
              margin-top: 4px;
            }
      
            & span {
              vertical-align: middle;
              @include inline-block-btn;
            }
      
          }
        }
      }
    }

    .filter-container {
      width: 26%;
      float: left;
      position: sticky;
      top: 80px;
      height: calc(100vh - 70px);
      padding-bottom: 120px;
      overflow-y: scroll;
      -ms-overflow-style: none;  // IE 10+
      scrollbar-width: none;  // Firefox
      box-sizing: border-box;
      
      &::-webkit-scrollbar { 
        display: none;  // Safari and Chrome
      }

      &::after {
        content: "";
        display: table;
        clear: both;
      }

      &::before {
        content: "";
        display: table;
      }
    
      .nav-title {
        height: 44px;
        @include flex(row, center, flex-start);
    
        h3 {
          margin: 0;
          line-height: 30px;
          color: rgba(0, 29, 64, 0.24);
          text-transform: uppercase;
        }
      }
    
      .filter-card {
        position: relative;
        padding: 10px 15px;
        height: fit-content;
        background: white;
        border-radius: 5px;
        margin-bottom: 2px;
        box-sizing: border-box;
    
        & mat-select {
          font-size: 14px;
          font-family: "Poppins", sans-serif;
          line-height: 21px;
          color: rgba(map-get($md-cfaccent, 500), .34);
          font-weight: 400;
    
          & .mat-form-field-wrapper {
            & .mat-form-field-flex {
              & .mat-form-field-infix {
                border-top: none;
              }
            }
          }
        }
    
        & simple-tag {
          @include inline-block-btn;
          margin: 15px 5px 0px 5px;
        }
    
        & mat-form-field {
          font-size: 14px;
          display: block;
        }
      }
    
      .side-filter-btn {
        @include btn-align-center;
    
        & action-button {
          @include inline-block-btn;
          margin-top: 10px;
        }
      }
    }
  }
}


@media only screen and (max-width:$max-mini-desktop-breakpoint) {
  :host {
    .career-main {
      .common-search-filter {
        display: block;
        width: 100%;
        text-align: left;
        margin: 0 auto 12px;
        background-color: $white;

        .people-search-header {
          display: block;
          border: none;
          width: 560px;
          margin: 0 auto;
          position: relative;

          & mat-form-field {
            width: 100%;
            mat-icon {
                cursor: pointer;
            }
          }
        }
        .filter-data {
          float: left;
          background-color: $white;
          margin-top: 20px;
          margin-left: 28px;

          & .filter_icon {
            display: block;
            cursor: pointer;
          }
        }
      }

      .people-main-container {
        width: 100%;
        .people-list-container {
          float: none;
          width: 95%;
          margin: 0 auto;
          padding-top: 10px;
        }
      }

      .filter-container {
        &.tablet {
          position: absolute;
          width: 100%;
          top: -1000%;
          left: 0;
          border-bottom: none;
          @include flex(column, center, flex-start);
          background-color: $white;
          padding: 0 10px 30px 10px;
          box-sizing: border-box;
          transition: top 0.5s;
          transition-timing-function: ease;
          z-index: 1;
          height: auto;
          float: none;
          margin: 0 auto;
          clear: both;

          &.open {
            top: 140px;
            transition: top 0.5s;
            transition-timing-function: ease;
            background-color: #f2f2f2;
            padding-top: 0
          }
        }

        .nav-title{
          width: 97%;
        }
        .filter-card{
          width: 97%;
        }
      }
    }
  }
}

@media only screen and (min-width:$min-tablet-breakpoint) and (max-width:$max-tablet-breakpoint) {
  :host {
    .career-main {
      .common-search-filter {
        .people-search-header {
          width: 450px;
        }
      }
    }
  }
}



@media only screen and (max-width:$max-mobile-breakpoint) {
  :host {
    .career-main {
      .common-search-filter  {
        .people-search-header {
          width: 70%;
        }

        .filter-data {
          margin-left: 14px;
        }
      }

      .people-main-container {
        padding-bottom: 100px;

        .people-list-container {
          width: 92%;
          .row {
            padding: 25px 10px;

            .header-container {
              @include flex(column, center, flex-start);
            }
          }
        }
      }

    }
  }
}

